--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,9 @@
 plugins {
-id "com.moowork.node" version "1.2.0"
+  id("com.github.node-gradle.node") version "3.5.1"
 }
 
 node {
-  version = '14.19.3'
-  distBaseUrl = 'https://direct.nodejs.org/dist/'
-  download = true
+    download = true       // Ensure Node.js and NPM are downloaded
 }
 
 task build 
@@ -20,8 +18,9 @@ task zip(type: Zip) {
 	include "routes/**"
 	include "views/**"
 	}
-   destinationDir(file("dist"))
-   baseName "trainSchedule"
+   destinationDirectory = file("dist")
+   destinationDirectory.set(file("dist"))
+   archiveBaseName.set("trainSchedule") // Use archiveBaseName
 }
 
 zip.dependsOn npm_build
